LTO, VTable/WTable elimination, dead class/struct/enum/protocol/conformance stripping, assoctype accessors, etc.

--- a/stdlib/CMakeLists.txt
+++ b/stdlib/CMakeLists.txt
@@ -79,6 +79,9 @@ option(SWIFT_BUILD_TEST_SUPPORT_MODULES
        "Whether to build StdlibUnittest and other test support modules. Defaults to On when SWIFT_BUILD_SDK_OVERLAY is On, or when SWIFT_INCLUDE_TESTS is On."
        "${SWIFT_BUILD_TEST_SUPPORT_MODULES_default}")
 
+set(SWIFT_STDLIB_LLVM_LTO OFF CACHE STRING
+    "Build stdlib with LLVM LTO. Valid values are 'OFF' (the default), 'thin' and 'full'.")
+
 #
 # End of user-configurable options.
 #
