--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -877,6 +877,31 @@ if run_vendor == 'apple':
         resource_dir_opt = "-resource-dir %s" % new_resource_dir
         lit_config.note('Using freestanding resource dir: ' + new_resource_dir)
 
+    # Auto-linking does not work when stdlib is built with LTO, because linked
+    # libraries are discovered too late (after optimizations are applied). Let's
+    # explicitly link all libraries needed in tests.
+    if "stdlib_lto" in config.available_features:
+        for library in ["swiftCore", "swiftStdlibUnittest",
+                        "swiftSwiftPrivateLibcExtras", "swiftSwiftPrivate",
+                        "swiftDarwin", "swiftSwiftPrivateThreadExtras",
+                        "swiftSwiftOnoneSupport"]:
+            swift_execution_tests_extra_flags += ' -Xlinker -l%s'% library
+
+        swift_execution_tests_extra_flags += ' -Xlinker -lto_library'
+        swift_execution_tests_extra_flags += ' -Xlinker /Users/kuba/swift-github-main/build/Ninja-RelWithDebInfoAssert/llvm-macosx-arm64/lib/libLTO.dylib'
+        swift_execution_tests_extra_flags += ' -lto=llvm-full'
+
+        swift_execution_tests_extra_flags += ' -Xfrontend -disable-reflection-metadata'
+        swift_execution_tests_extra_flags += ' -Xfrontend -disable-reflection-names'
+        swift_execution_tests_extra_flags += ' -Xfrontend -disable-generic-metadata-prespecialization'
+        swift_execution_tests_extra_flags += ' -Xfrontend -emit-dead-strippable-symbols'
+        swift_execution_tests_extra_flags += ' -Xfrontend -disable-concrete-type-metadata-mangled-name-accessors'
+        swift_execution_tests_extra_flags += ' -Xfrontend -validate-tbd-against-ir=none'
+
+    swift_execution_tests_extra_flags += ' -Xfrontend -disable-concrete-type-metadata-mangled-name-accessors'
+    #swift_execution_tests_extra_flags += ' -Xfrontend -enable-associated-type-accessors'
+
+
     xcrun_prefix = (
         "xcrun --toolchain %s --sdk %r" %
         (config.darwin_xcrun_toolchain, config.variant_sdk))
