--- a/utils/build-presets.ini
+++ b/utils/build-presets.ini
@@ -2371,6 +2371,8 @@ swift-enable-compatibility-overrides=0
 swift-runtime-macho-no-dyld=1
 swift-stdlib-single-threaded-runtime=1
 swift-stdlib-os-versioning=0
+swift-stdlib-stable-abi=0
+swift-stdlib-llvm-lto=full
 
 [preset: stdlib_S_standalone_minimal_macho_x86_64,build]
 mixin-preset=
